--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by venv; see https://docs.python.org/3/library/venv.html
 
+
+Notebooks/datapizza_test.ipynb
 # Virtual env 
 .venv/ 
 # Python cache 
